# 3DEDGE_NANOv1.0

./: CMakeLists.txt  README.md
include/: LRFB_widget.h  axis_widget.h  drone.h  gui.h  joystick.h  message.h  parameters.h  rotate_widget.h  status_button.h  throttle_widget.h
src/: LRFB_widget.cpp  app.cpp  axis_widget.cpp  drone.cpp  gui.cpp  joystick.cpp  parameters.cpp  rotate_widget.cpp  status_button.cpp  throttle_widget.cpp  video_widget.cpp
